--- a/Raman/Raman/Controls/BaselineCorrectionControl.resx
+++ b/Raman/Raman/Controls/BaselineCorrectionControl.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,56 +117,4 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>116, 17</value>
-  </metadata>
-  <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFGSURBVDhPrZI9SwQxEIansrLwo1DU/yCIKIIfnZ0gwnEf
-        yayFP8JWC0UtRRD1H1jf3SbZg+tsBRtLQRAVFQtRsNJJfD1huTXNPRB23tmZl0wS6g1st4jdV2cpd4M/
-        f5TO+4izYagCtFklbj4EkzyczZF2t6TtCjI52K0RN+7kO93VwKPNZNhdYpeRAZXWiDQ9hmZPkYHHm/ja
-        9fYAMoK225I8gfJnsoeoO9oeyjibUIJ2l6TSBag42s6SshdQQtW9U60+CBWn1O6ncuMZSmDzQRtmCCqO
-        N+D6G5TA5krOYAkqjh/Bj92B3a6YnEHFYXck9TtQQsWNUTl9pcTMIFOMSqek+UmucRQZoI2imr3/1yQ0
-        y2NTropMjsTqsBNtTyVeDG/f3w5n83JtxzL3S3HzL6o5IYUHsq5l1s+wfuJ9SlrjqOoVRN8kcIOT3ZSG
-        iAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnOpenFiles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADASURBVDhPY0ABMTt7GGJ3xUJ5JIKkDbxAzV5A/JE0Q+L3
-        CzDE7FrHELvpA0Ps9rsM0bt+APnnlZSU5BQVFffDsIKCwlZ5eXkDqC4kELtzHtDGmQz2+1kY4nbGMETu
-        eMIQv0NDRUWFXUpKShiGoQbtAIobQnVCQfjWNwzJO4TA7Ngd4dg0IxmAxRCQs6FATk5OEZtmNAPA3oFq
-        QQVAiS3YNKNjkCFQLagAJIFNAzoeNWCwG7ACJEkEXgHVQilgYAAAZEF1ky5aI1cAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnZoomWindow.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFFSURBVDhPrZJdSsNQEIUTXIKgUJWkaWILmqKLiTQU91AE
-        32rFR18sXYWtNfTNh2Y1rkS/Y+bS9AcR6YHD5E7OmZk7ibd3NJvNbhiGj/A9CIJSEY7IpybZjSzLDhDd
-        wSnGXhRFCTxS1NnyA+nMsg6ZEb8kSXLSaDQONxnH8SmasYqYZQVedOGrzF7+8endLr/8vHiWUVFn5a3I
-        jEaXZq2gO2tMGSSud3Z0eXQ5+qFZK2hRuqsEfr6Y1I2OLo+2TZG5WSuQKLWwTdMucoVj9EuzVtAEvDiX
-        wL8pnjZN9TzmztYEFBiR/NMOaNTf2gHJFE615d++QqvVOkP3Rrww6wpMMODlWEXqnR3NPKH7vVnWoT/M
-        isyI+lRtLZbnDrm+OssMC3JXZtuGfhJED4jmsFTkPHRjUyjlvGDS6x/Df7CXIrpGEAS9bw2jfN/o4Le6
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="zoomToOriginalSize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFkSURBVDhPrVLLSsNQEC3pUncBhajkbSs1xX6C4FpFCanE
-        lf5AEdwl8Q8s7t0p2BpTlwXzK/ovnmPm0tZIF9IDw2TmnjMzd3IbK4dt213Lsu5gb6ZplvSwDPlAKH8j
-        DMMmSDewEYR9x3F82AY9Y8kPyBPJIigG+d73/S3DMPTf5nneNjhDFhHJDDjowl4obp48nq4dJp15MWPm
-        pcgYjfZFWoF35pgka1GeNuLp5/pRsseYnrEWFSlj8C7AT0RagYviXVVH7fzpSu8d49PQ6RmrM3BbKJKL
-        tAISJRemSMsMV9gE/0OkFTgBDnYVqTbB2fO1OoO4XZsABTIkZQdFfQeX0y8tmmSM0Siu7QDJADbilpf9
-        Bdd1d8B7he+IdAZMMMDhkEXmxcpE/IDutyJZBF+YFBnD81e1uFh8t5GL2ZliWIHcgcjq4CMBKQUph5X0
-        iBM1NgoFiN8xae9H8B+spAivYZpm/xsgcXdgsdi7AgAAAABJRU5ErkJggg==
-</value>
-  </data>
 </root>
