--- a/Raman/Raman/Controls/MainForm.resx
+++ b/Raman/Raman/Controls/MainForm.resx
@@ -127,32 +127,32 @@
   <data name="tsbRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFESURBVDhPrZI9SwQxEIansrLwo1DU/yCIKIIfnZ0gwsG5
-        mVkLf4StFopaiiDqP7AWN8keXGcr2FgeCKKiYiEKVvomjicst25zD4Sdd3bmJZOEuoO4TRL/1V7Gt/TP
-        H7WzHpJ8UFUJbJdJsodoUkTyGWJ/S+yWNFNA/Aqa7/Cd7GgQYDsed5e6Rc0o9cYQmh5jc6DMIBBMQu1a
-        s08zgN0WkseqwpnsatQZdgcYZ0MVYH9FJptTVQ27aTLuUhVI/Dsl5/2qqqk1eynJnlUBsR+0bgdUVRMM
-        JHtTBcRe4wwWVFUTRghjtxG/A5NTVdWIP0T9tipQ9yOY6ZVSO6WZckw2geYnXOOwZhS2hhJ3/69JbMZj
-        M35VMwVSx3En7E4Qz8e3H25H8llc2xHmfilv/sVcjKFwH+sGs37G9RPvUdoY1apuQfQNR8CDp4wRutcA
-        AAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFHSURBVDhPrZI9SwQxEIansrLwo1DU/yCIeAh+dHaCCAd7
+        l8xe4Y+w1UJRSxFE/QfW7m2SPbjOVrjGUhBERcVCFKx0El9PWG7d5h4IO+/szEsmCfUHtlvE7qu7lLvB
+        nz+q5wPE2ShUAdqsETcfgkkezuZJu1vSdhWZHOzWiZM7+c72NPBoMx12F9sVZEDUGpOmx9DsKTLweBNf
+        22gPISNouy3JEyh/JnuIeqPtoYyzCSVod0UqXYQqR9sKKXsJJdTcO9UvhqHKqbYHKUqeoQQ2H7RhRqDK
+        8QacvEEJbDpyBstQ5fgR/Nhd2O2KyRlUOeyOpH4HSojcBEXpK8VmDpliVDojzU9yjePIAG0U1e39vyah
+        WR6bcjVkcsRWh51oeyrxUnj7/nY4W5BrO5a5X4qbf1HNKSk8kHUts36G9RPvU9yaRFW/IPoGKjiDl/IV
+        ykgAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsbOpenFiles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAC+SURBVDhPY0ABMTt7GGJ3xUJ5JIKkDbxAzV5A/JE0Q+L3
-        CzDE7FrHELv9AxDfZYje9QPIP6+kpCSnqKi4H4YVFBS2ysvLG0B1IYHYnfOANs5ksN/PwhC3M4YhascT
-        hvgdGioqKuxSUlLCMAw1aAdQ3BCqEwqitr9hSN4hBGbH7gjHphnJACyGgJwNBXJycorYNKMZAPYOVAsq
-        AEpswaYZHYMMgWpBBSAJbBrQ8agBg92AFSBJIvAKqBZKAQMDAIg7dZ6G0CNdAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADASURBVDhPY0ABMTt7GGJ3xUJ5JIKkDbxAzV5A/JE0Q+L3
+        CzDE7FrHELv1A0Ps9rsM0bt+APnnlZSU5BQVFffDsIKCwlZ5eXkDqC4kELtzHtDGmQz2+1kY4nbGMETu
+        eMIQv0NDRUWFXUpKShiGoQbtAIobQnVCQcTWNwzJO4TA7Ngd4dg0IxmAxRCQs6FATk5OEZtmNAPA3oFq
+        QQVAiS3YNKNjkCFQLagAJIFNAzoeNWCwG7ACJEkEXgHVQilgYAAAcdR1l5F2nOYAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsbZoomToWindow.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAD6SURBVDhPzVJJCsJAEPQVomJmJssnFAXxrM/xEUZBiJin
-        CW5njR68iHi0ClrIJKNE8GBB0WS6q7oySe2niKKorbVegjul1AN1a4xJPc9rych7+L7fhyhDnYZh2AmC
-        QLHiOYbRhX0ZLYMbID6DI7DpIM9PNBWJDcRccXNBZBH9GeYWIrGBgQ3jFkV5ss+7EYkNuN8ZryjKE9s1
-        eBOJDTT2FRJ0sWgtEhv8dGjGLuGLWDLHTCISG4yH5hEcu8Ryzq9QF0kZaA5pwk2MS1O+Fp8pBjMkHci4
-        G/wf+DoQHWB25a2jJqgNiiuZfAJS9mjCtHL0Pf7HhHdhjJk8AdtpWV8uvkcNAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAD8SURBVDhPzVJJCsJAEPQVojKZTJZPKAriOT7HRxgFIaJP
+        E9zObgcvIh6tglYyySgKHiwomkl3VVcmqfwUcRwr3/en4FopdUNdGWPmnuc1ZOQ1giDoQHRAHUZR1AzD
+        ULPinMLoxL6MlsENWusjmIB1BxOY72kqEhuIOeNmh/BJ9EeYm4jEBgaWjFsU5ck+70YkNuB+ZbyiKE9s
+        98GLSGygsfkgQQuLFiKxwU+HZuoSPoglY8xkIrHBeGjuwL5LzOfyFaoiKQPNHk24iXFpytfimWL+I0ja
+        lXE3+D/wdSDawuzMW0fNUGsUf2TyDkjZpgnTyqPv8T8mvAtjzOAOcs9ZI0LMrV4AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsbZoomToOriginalSize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -165,6 +165,40 @@
         tAISJRemSMsMV9gE/0OkFTgBDnYVqTbB2fO1OoO4XZsABTIkZQdFfQeX0y8tmmSM0Siu7QDJADbilpf9
         Bdd1d8B7he+IdAZMMMDhkEXmxcpE/IDutyJZBF+YFBnD81e1uFh8t5GL2ZliWIHcgcjq4CMBKQUph5X0
         iBM1NgoFiN8xae9H8B+spAivYZpm/xsgcXdgsdi7AgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="tsbBaselineCorrection.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADnSURBVDhP7ZGxDYJAGIVJcCIHkAHExoRShVYpLCxNHAA7
+        J1CMCVfCgVAIM2DiFELEhLM9+c2hBlCh90tede97cMA1gUoSTybykqijhKhymE7kNjv6DUUSn84GK6Iq
+        9BU5ZMffAZm4ok7M3pVMh6fnwFi5sMpncvnmiRRSGNFYrZrHa7vdXS4/Y4oJXAe+CauWKT75PanXNWgg
+        tFi1zF9uKAPhfjEnjhiX5OwXwjirVRMEQUu3/cjAVpS4/WMjGdjiQycboBBk43Mmx7VlIBO1fGBj+TFc
+        p7YM6Ng3YWTt+AJCqL74gOPuKshCm1S5J+MAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAQAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAJ+LeqWok4GjqJOBo6iTgaOok4GjqJOBo6iTgaOok4GjqJOBo6iTgaOok4Gjn4t6pQAA
+        AAAAAAAAAAAAAAAAAACsloPf08Cw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/08Cw/62X
+        htcAAAAAAAAAAAAAAAAAAAAAn4VsO7SQcebFn4H/xZ+B/8Wfgf/Fn4H/wJt8/aqKb8KdiHaFnYh2hZ+K
+        doOUhG8wAAAAAAAAAAAAAAAAAAAAAAAAAAC9f1c62KB15+WvhP/El3X/77WK/7SAWtpYSDuFVkg7hVZI
+        O4VVRjplAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATT81fYxnSuHBk2/8kHJZ/8GMY/VqV0LHYFFAw2BR
+        QMNgUUDDV0o7qwAAAAAAAAAAAAAAAAAAAAAAAAAATD81ZEw/NZlVVVUDxoxgp86UZ9i9h1Y+AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1ANsY/Pz8IAAAAAAAAAAAAAAAAAAAAAAAA
+        AAChjXnFtJ+O4aCLeKUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABMQDbLAAAAAAAAAAAAAAAAAAAAAAAA
+        AADAhVc9upBu4sukhP+4jWnTv4dfIAAAAAAAAAAAAAAAAAAAAAAAAAAATT82wFFFORYAAAAAAAAAAAAA
+        AAAAAAAAypBlpPC3i//wt4v/8LeL/8GIXIUAAAAAAAAAAAAAAAAAAAAAAAAAAExANUNMQDW6RkY4EllK
+        PIZgUT/AYVFAwqp9Wunwt4v/8LeL//C3i//BiFyFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATD40TU0+
+        NdNoV0P7o4Ji/3dkS/+tgFz/8LeL//C3i//wt4v/wYhchQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABVRDMPYVE/4IJrUf93ZEv/rYBc//C3i//wt4v/8LeL/8GIXIUAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAFJMOShVSTuAVkg7hbCAXdPwt4v/8LeL//C3i//BiFyFAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADCiV6l0Jtx+NSgd//RmnD0voRYfwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAK+biMPUwbD/qZOBpAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALJ4TDmsgmG5rodnyKyAXqe1fE8tAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAA==
 </value>
   </data>
 </root>
